--- a/settings.html
+++ b/settings.html
@@ -67,6 +67,10 @@
           <select class="w-full p-2 bg-gray-800 border border-gray-600 rounded">
             <option>Sunday</option>
             <option>Monday</option>
+            <option>Tuesday</option>
+            <option>Wednsday</option>
+            <option>Thursday</option>
+            <option>Friday</option>
             <option>Saturday</option>
           </select>
         </div>
