--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Settings - NexusTime</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js';
@@ -15,39 +14,38 @@
       apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
       authDomain: "nexustime-e8b91.firebaseapp.com",
       projectId: "nexustime-e8b91",
-      storageBucket: "nexustime-e8b91.firebasestorage.app",
+      storageBucket: "nexustime-e8b91.appspot.com",
       messagingSenderId: "516976739338",
       appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
       measurementId: "G-QRSD6TYH86"
     };
 
-    console.log("Initializing Firebase with config:", firebaseConfig);
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    onAuthStateChanged(auth, async (user) => {
-      console.log("onAuthStateChanged fired, user=", user);
+    onAuthStateChanged(auth, async user => {
       if (!user) {
-        console.log("Debug: No user, redirecting to app.html");
-        window.location.href = "app.html";
+        console.log('No user, redirecting...');
+        window.location.href = 'app.html';
         return;
       }
 
-      const workspaceId = localStorage.getItem("activeWorkspace");
-      console.log("Debug: Retrieved workspaceId=", workspaceId);
-      if (!workspaceId) return;
+      const activeWorkspace = localStorage.getItem('activeWorkspace');
+      if (!activeWorkspace) {
+        console.log('No active workspace, redirecting...');
+        window.location.href = 'switch-workspace.html';
+        return;
+      }
 
-      const docRef = doc(db, "workspaces", workspaceId);
-      const docSnap = await getDoc(docRef);
-      if (docSnap.exists()) {
-        const data = docSnap.data();
-        document.getElementById("planName").innerText = data.plan || "Unknown Plan";
-      } else {
-        console.log("No such workspace!");
+      const workspaceDoc = await getDoc(doc(db, `workspaces/${activeWorkspace}`));
+      if (workspaceDoc.exists()) {
+        const data = workspaceDoc.data();
+        document.getElementById('planName').innerText = data.plan || 'Unknown';
       }
     });
   </script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body class="bg-gray-900 text-white font-inter min-h-screen flex flex-col">
   <header class="bg-gray-800 p-4 flex items-center justify-between">
@@ -88,77 +86,10 @@
 
     const sections = {
       general: content.innerHTML,
-      user: `
-        <h2 class='text-xl font-bold mb-4'>User Profile</h2>
-        <form class="space-y-4">
-          <label class="block">
-            <span class="block text-sm font-medium text-gray-200">Name</span>
-            <input type="text" class="mt-1 block w-full bg-gray-800 text-white border border-gray-600 rounded p-2" placeholder="Your Name" />
-          </label>
-          <label class="block">
-            <span class="block text-sm font-medium text-gray-200">Email</span>
-            <input type="email" class="mt-1 block w-full bg-gray-800 text-white border border-gray-600 rounded p-2" placeholder="your@email.com" />
-          </label>
-          <label class="block">
-            <span class="block text-sm font-medium text-gray-200">Phone</span>
-            <input type="tel" class="mt-1 block w-full bg-gray-800 text-white border border-gray-600 rounded p-2" placeholder="(555) 555-5555" />
-          </label>
-        </form>
-      `,
-      billing: `
-        <h2 class='text-xl font-bold mb-4'>Workspace Billing</h2>
-        <div class="space-y-6">
-          <div class="bg-gray-800 p-4 rounded-lg">
-            <h3 class="text-lg font-semibold">Plan Summary</h3>
-            <p>Annual Plan – Starter: $3.40/user/month</p>
-            <p>Annual Plan – Pro: $6.80/user/month</p>
-            <p>Monthly Plan – Starter: $4/user/month</p>
-            <p>Monthly Plan – Pro: $8/user/month</p>
-          </div>
-          <div class="bg-gray-800 p-4 rounded-lg">
-            <h3 class="text-lg font-semibold">Payment Method</h3>
-            <button class="mt-2 bg-emerald-400 text-gray-900 px-4 py-2 rounded hover:bg-emerald-500">Add Payment Method</button>
-          </div>
-          <div class="bg-gray-800 p-4 rounded-lg">
-            <h3 class="text-lg font-semibold">Add Users</h3>
-            <p>Each additional user costs per your selected plan.</p>
-            <button class="mt-2 bg-emerald-400 text-gray-900 px-4 py-2 rounded hover:bg-emerald-500">Add User</button>
-          </div>
-        </div>
-      `,
-      logo: `
-        <h2 class='text-xl font-bold mb-4'>Workspace Logo</h2>
-        <p class='text-gray-300'>Coming Soon</p>
-      `,
-      roles: `
-        <h2 class='text-xl font-bold mb-4'>Roles</h2>
-        <form class="space-y-6">
-          <div>
-            <h3 class="font-semibold mb-2">Administrator</h3>
-            <ul class="space-y-1 text-sm">
-              <li>✓ Full access to all settings</li>
-              <li>✓ Manage users and roles</li>
-              <li>✓ Configure payroll</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="font-semibold mb-2">Supervisor</h3>
-            <ul class="space-y-1 text-sm">
-              <li>✓ Approve time entries</li>
-              <li>✓ Manage team schedules</li>
-              <li>✓ Review logs</li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="font-semibold mb-2">Employee</h3>
-            <ul class="space-y-1 text-sm">
-              <li>✓ View and edit own time</li>
-              <li>✓ Submit time off</li>
-              <li>✓ Review own logs</li>
-            </ul>
-          </div>
-        </form>
-      `
+      user: `<h2 class='text-xl font-bold mb-4'>User Profile</h2><form class="space-y-4"><label class="block"><span class="block text-sm font-medium text-gray-200">Name</span><input type="text" class="mt-1 block w-full bg-gray-800 text-white border border-gray-600 rounded p-2" placeholder="Your Name" /></label><label class="block"><span class="block text-sm font-medium text-gray-200">Email</span><input type="email" class="mt-1 block w-full bg-gray-800 text-white border border-gray-600 rounded p-2" placeholder="your@email.com" /></label><label class="block"><span class="block text-sm font-medium text-gray-200">Phone</span><input type="tel" class="mt-1 block w-full bg-gray-800 text-white border border-gray-600 rounded p-2" placeholder="(555) 555-5555" /></label></form>`,
+      billing: `<h2 class='text-xl font-bold mb-4'>Workspace Billing</h2><div class="space-y-6"><div class="bg-gray-800 p-4 rounded-lg"><h3 class="text-lg font-semibold">Plan Summary</h3><p>Annual Plan – Pro: $6.80/user/month</p><p>Monthly Plan – Starter: $4/user/month</p></div><div class="bg-gray-800 p-4 rounded-lg"><h3 class="text-lg font-semibold">Payment Method</h3><button class="mt-2 bg-emerald-400 text-gray-900 px-4 py-2 rounded hover:bg-emerald-500">Add Payment Method</button></div><div class="bg-gray-800 p-4 rounded-lg"><h3 class="text-lg font-semibold">Add Users</h3><p>Each additional user costs per your selected plan.</p><button class="mt-2 bg-emerald-400 text-gray-900 px-4 py-2 rounded hover:bg-emerald-500">Add User</button></div></div>`,
+      logo: `<h2 class='text-xl font-bold mb-4'>Workspace Logo</h2><p class='text-gray-300'>Coming Soon</p>`,
+      roles: `<h2 class='text-xl font-bold mb-4'>Roles</h2><form class="space-y-6"><div><h3 class="font-semibold mb-2">Administrator</h3><ul class="space-y-1 text-sm"><li>✓ Full access to all settings</li><li>✓ Manage users and roles</li><li>✓ Configure payroll</li></ul></div><div><h3 class="font-semibold mb-2">Supervisor</h3><ul class="space-y-1 text-sm"><li>✓ Approve time entries</li><li>✓ Manage team schedules</li><li>✓ Review logs</li></ul></div><div><h3 class="font-semibold mb-2">Employee</h3><ul class="space-y-1 text-sm"><li>✓ View and edit own time</li><li>✓ Submit time off</li><li>✓ Review own logs</li></ul></div></form>`
     };
 
     buttons.forEach(btn => {
