--- a/switch-workspace.html
+++ b/switch-workspace.html
@@ -1,181 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Switch Workspace</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Switch Workspace - NexusTime</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/@radial-progress-bar/radial-progress-bar@latest"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-  <script>
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js';
+    import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js';
+    import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js';
+
     const firebaseConfig = {
       apiKey: "AIzaSyCKy_SqRUTKkoeuTzrksN2_TQ41v8Zs9Ls",
       authDomain: "nexustime-e8b91.firebaseapp.com",
       projectId: "nexustime-e8b91",
       storageBucket: "nexustime-e8b91.appspot.com",
       messagingSenderId: "516976739338",
-      appId: "1:516976739338:web:537ae732707a2a1aab4bf3"
-    };
-    firebase.initializeApp(firebaseConfig);
-  </script>
-</head>
-<body class="bg-gray-950 text-white min-h-screen p-6">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="text-3xl font-bold text-center w-full">Select a Workspace</h1>
-    <div id="planInfo" class="absolute top-6 right-6 text-sm text-gray-400 text-right"></div>
-  </div>
-
-  <div class="flex justify-end pr-6 mb-6" id="progressWrapper"></div>
-
-  <div class="text-center mb-6">
-    <select id="sortSelector" class="bg-gray-800 border border-gray-600 text-white rounded px-4 py-2">
-      <option value="name" selected>Sort by Name</option>
-      <option value="plan">Sort by Plan</option>
-      <option value="createdAt">Sort by Date Created</option>
-    </select>
-  </div>
-
-  <div id="workspaceGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto"></div>
-
-  <script>
-    let allWorkspaces = [];
-
-    const planLimits = {
-      Free: 1,
-      Starter: 3,
-      Pro: 10,
-      Enterprise: Infinity
+      appId: "1:516976739338:web:537ae732707a2a1aab4bf3",
+      measurementId: "G-QRSD6TYH86"
     };
 
-    function renderPlanProgressBar(plan, count, limit) {
-      const wrapper = document.getElementById("progressWrapper");
-      wrapper.innerHTML = "";
-      if (plan === "Enterprise") return;
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth();
+    const db = getFirestore(app);
 
-      const percent = Math.min(100, (count / limit) * 100);
-      const tooltip = `${count}/${limit} Workspaces Used`;
-      const container = document.createElement("div");
-      container.className = "relative group w-16 h-16";
-      container.innerHTML = `
-        <radial-progress-bar 
-          diameter="64"
-          stroke="6"
-          progress="${percent}"
-          color="#10B981"
-          track="rgba(255,255,255,0.1)">
-        </radial-progress-bar>
-        <div class="absolute w-max px-3 py-1 text-sm text-white bg-black rounded shadow-lg opacity-0 group-hover:opacity-100 transition-opacity -top-12 left-1/2 -translate-x-1/2">
-          ${tooltip}
-        </div>
-      `;
-      wrapper.appendChild(container);
-    }
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        window.location.href = "app.html";
+        return;
+      }
 
-    function renderWorkspaces(workspaces, userPlan) {
-      const container = document.getElementById("workspaceGrid");
+      const workspacesRef = collection(db, `users/${user.uid}/workspaces`);
+      const snapshot = await getDocs(workspacesRef);
+
+      const container = document.getElementById("workspaceList");
       container.innerHTML = "";
 
-      const userLimit = planLimits[userPlan] || 1;
-      const canAddMore = workspaces.length < userLimit;
-
-      const planInfo = document.getElementById("planInfo");
-      if (userPlan === "Enterprise") {
-        planInfo.innerHTML = `Plan: <strong>${userPlan}</strong><br>${workspaces.length} workspaces created`;
-      } else {
-        planInfo.innerHTML = `Plan: <strong>${userPlan}</strong><br>${workspaces.length}/${userLimit} workspaces used <a href="/pricing.html" class="text-blue-400 underline ml-2">Upgrade</a>`;
-        renderPlanProgressBar(userPlan, workspaces.length, userLimit);
+      if (snapshot.empty) {
+        container.innerHTML = "<p class='text-white'>No workspaces found.</p>";
+        return;
       }
 
-      if (workspaces.length > 0) {
-        workspaces.forEach(({ id, data }) => {
-          const div = document.createElement("div");
-          div.className = "bg-gray-900 border border-gray-800 rounded-xl p-6 shadow-md hover:ring-2 hover:ring-green-500 transition cursor-pointer";
-          div.innerHTML = `
-            <div class="flex items-center space-x-4">
-              <img src="${data.logoUrl || '/assets/default-logo.png'}" alt="logo" class="w-12 h-12 rounded-md">
-              <div>
-                <h3 class="text-lg font-semibold">${data.name}</h3>
-                <span class="text-sm text-gray-400">${data.industry}</span>
-              </div>
-            </div>
-            <div class="mt-4">
-              <span class="inline-block px-2 py-1 text-xs rounded bg-green-600 text-white font-medium">${data.plan}</span>
-            </div>
-          `;
-          div.onclick = async () => {
-            const db = firebase.firestore();
-            const user = firebase.auth().currentUser;
-            await db.collection("users").doc(user.uid).set({
-              activeWorkspaceId: id
-            }, { merge: true });
-            window.location.href = "/dashboard.html";
-          };
-          container.appendChild(div);
-        });
-      }
-
-      const addCard = document.createElement("div");
-      addCard.className = "flex flex-col items-center justify-center border-2 border-dashed rounded-xl p-6 text-center transition";
-
-      if (canAddMore) {
-        addCard.classList.add("bg-gray-800", "border-gray-700", "hover:border-green-500", "hover:bg-gray-700", "cursor-pointer");
-        addCard.innerHTML = `
-          <svg class="w-10 h-10 text-green-400 mb-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
-          </svg>
-          <p class="text-sm font-medium">Add New Workspace</p>
-        `;
-        addCard.onclick = () => {
-          window.location.href = "/onboarding.html";
+      snapshot.forEach((doc) => {
+        const ws = doc.data();
+        const div = document.createElement("div");
+        div.className = "bg-gray-800 p-4 rounded mb-4 cursor-pointer hover:bg-gray-700";
+        div.innerHTML = `<h2 class='text-white font-bold text-lg'>${ws.name}</h2><p class='text-gray-400 text-sm'>${doc.id}</p>`;
+        div.onclick = () => {
+          localStorage.setItem("activeWorkspace", doc.id);
+          window.location.href = "dashboard.html";
         };
-      } else {
-        addCard.classList.add("bg-gray-700", "border-gray-600", "opacity-60");
-        addCard.innerHTML = `
-          <svg class="w-10 h-10 text-red-400 mb-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
-          </svg>
-          <p class="text-sm font-medium">Upgrade required to add more workspaces</p>
-        `;
-        addCard.onclick = () => {
-          window.location.href = "/pricing.html";
-        };
-      }
-
-      container.appendChild(addCard);
-    }
-
-    function sortWorkspaces(by, userPlan) {
-      const sorted = [...allWorkspaces].sort((a, b) => {
-        const aVal = a.data[by] || "";
-        const bVal = b.data[by] || "";
-        if (by === "createdAt") {
-          return (bVal?.seconds || 0) - (aVal?.seconds || 0);
-        }
-        return aVal.localeCompare(bVal);
+        container.appendChild(div);
       });
-      renderWorkspaces(sorted, userPlan);
-    }
-
-    async function loadWorkspaces() {
-      const user = firebase.auth().currentUser;
-      if (!user) return;
-      const db = firebase.firestore();
-      const userDoc = await db.collection("users").doc(user.uid).get();
-      const userPlan = userDoc.exists ? userDoc.data().plan || "Free" : "Free";
-      const snapshot = await db.collection("workspaces").where("ownerId", "==", user.uid).get();
-      allWorkspaces = snapshot.docs.map(doc => ({ id: doc.id, data: doc.data() }));
-      sortWorkspaces("name", userPlan);
-
-      document.getElementById("sortSelector").addEventListener("change", (e) => {
-        sortWorkspaces(e.target.value, userPlan);
-      });
-    }
-
-    firebase.auth().onAuthStateChanged(user => {
-      if (user) loadWorkspaces();
     });
   </script>
+</head>
+<body class="bg-gray-900 text-white font-inter min-h-screen p-8">
+  <h1 class="text-3xl font-bold mb-6">Select a Workspace</h1>
+  <div id="workspaceList" class="space-y-4"></div>
 </body>
 </html>
